--- a/untitled/widget.ui
+++ b/untitled/widget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Hello Widget</string>
+   <string>Python Qt Example</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
